--- a/package.json
+++ b/package.json
@@ -36,34 +36,34 @@
         "types/*"
     ],
     "devDependencies": {
-        "@babel/core": "^7.13.10",
-        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.13.8",
-        "@babel/plugin-proposal-optional-chaining": "^7.13.8",
-        "@babel/plugin-transform-arrow-functions": "^7.13.0",
-        "@babel/plugin-transform-runtime": "^7.13.10",
-        "@babel/preset-env": "^7.13.10",
-        "@babel/preset-typescript": "^7.13.0",
-        "@babel/runtime": "^7.13.10",
-        "@babel/runtime-corejs3": "^7.13.10",
-        "@types/chai": "^4.2.15",
-        "@types/mocha": "^8.2.1",
-        "@types/wechat-miniprogram": "^3.3.0",
-        "@typescript-eslint/eslint-plugin": "^4.17.0",
-        "@typescript-eslint/parser": "^4.17.0",
-        "babel-loader": "^8.2.2",
+        "@babel/core": "^7.16.0",
+        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.0",
+        "@babel/plugin-proposal-optional-chaining": "^7.16.0",
+        "@babel/plugin-transform-arrow-functions": "^7.16.0",
+        "@babel/plugin-transform-runtime": "^7.16.4",
+        "@babel/preset-env": "^7.16.4",
+        "@babel/preset-typescript": "^7.16.0",
+        "@babel/runtime": "^7.16.3",
+        "@babel/runtime-corejs3": "^7.16.3",
+        "@types/chai": "^4.2.22",
+        "@types/mocha": "^8.2.3",
+        "@types/wechat-miniprogram": "^3.4.0",
+        "@typescript-eslint/eslint-plugin": "^4.33.0",
+        "@typescript-eslint/parser": "^4.33.0",
+        "babel-loader": "^8.2.3",
         "chai": "^4.3.4",
-        "core-js": "^3.9.1",
-        "eslint": "^7.22.0",
-        "eslint-plugin-mocha": "^8.1.0",
-        "eslint-plugin-prettier": "^3.3.1",
+        "core-js": "^3.19.1",
+        "eslint": "^7.32.0",
+        "eslint-plugin-mocha": "^7.0.1",
+        "eslint-plugin-prettier": "^3.4.1",
         "eslint-plugin-standard": "^5.0.0",
-        "mocha": "^8.3.2",
+        "mocha": "^8.4.0",
         "mock-local-storage": "^1.1.17",
-        "prettier": "^2.2.1",
-        "ts-node": "^9.1.1",
-        "typescript": "~4.2.3",
-        "webpack": "^5.25.1",
-        "webpack-cli": "^4.5.0"
+        "prettier": "^2.4.1",
+        "ts-node": "^10.4.0",
+        "typescript": "^4.5.2",
+        "webpack": "^5.64.2",
+        "webpack-cli": "^4.9.1"
     },
     "mocha": {
         "colors": true,
