--- a/package.json
+++ b/package.json
@@ -35,35 +35,41 @@
         "dist/*",
         "types/*"
     ],
+    "engines": {
+        "node": ">=12",
+        "npm": ">=7",
+        "pnpm": ">=6"
+    },
     "devDependencies": {
-        "@babel/core": "^7.16.0",
-        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.0",
-        "@babel/plugin-proposal-optional-chaining": "^7.16.0",
-        "@babel/plugin-transform-arrow-functions": "^7.16.0",
-        "@babel/plugin-transform-runtime": "^7.16.4",
-        "@babel/preset-env": "^7.16.4",
-        "@babel/preset-typescript": "^7.16.0",
-        "@babel/runtime": "^7.16.3",
-        "@babel/runtime-corejs3": "^7.16.3",
-        "@types/chai": "^4.2.22",
-        "@types/mocha": "^8.2.3",
+        "@babel/core": "^7.16.12",
+        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
+        "@babel/plugin-proposal-optional-chaining": "^7.16.7",
+        "@babel/plugin-transform-arrow-functions": "^7.16.7",
+        "@babel/plugin-transform-runtime": "^7.16.10",
+        "@babel/preset-env": "^7.16.11",
+        "@babel/preset-typescript": "^7.16.7",
+        "@babel/runtime": "^7.16.7",
+        "@babel/runtime-corejs3": "^7.16.8",
+        "@types/chai": "^4.3.0",
+        "@types/mocha": "^9.1.0",
+        "@types/node": "^17.0.12",
         "@types/wechat-miniprogram": "^3.4.0",
-        "@typescript-eslint/eslint-plugin": "^4.33.0",
-        "@typescript-eslint/parser": "^4.33.0",
+        "@typescript-eslint/eslint-plugin": "^5.10.1",
+        "@typescript-eslint/parser": "^5.10.1",
         "babel-loader": "^8.2.3",
-        "chai": "^4.3.4",
-        "core-js": "^3.19.1",
-        "eslint": "^7.32.0",
-        "eslint-plugin-mocha": "^7.0.1",
-        "eslint-plugin-prettier": "^3.4.1",
+        "chai": "^4.3.6",
+        "core-js": "^3.20.3",
+        "eslint": "^8.7.0",
+        "eslint-plugin-mocha": "^10.0.3",
+        "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-standard": "^5.0.0",
         "mocha": "^8.4.0",
-        "mock-local-storage": "^1.1.17",
-        "prettier": "^2.4.1",
+        "mock-local-storage": "^1.1.19",
+        "prettier": "^2.5.1",
         "ts-node": "^10.4.0",
-        "typescript": "^4.5.2",
-        "webpack": "^5.64.2",
-        "webpack-cli": "^4.9.1"
+        "typescript": "~4.5.5",
+        "webpack": "^5.67.0",
+        "webpack-cli": "^4.9.2"
     },
     "mocha": {
         "colors": true,
